--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-/osmosis-swap-filter
-/nats.creds
-/start.sh
-.DS_Store
-/.env
-/coverage.out
+*.json
+*.pem
+*.key
+*.creds
+*.jwt
+.env
+dist/
+.idea
